# webpage-summary-agent

./: .clineignore  .gitignore  .pre-commit-config.yaml  DEVELOPMENT.md  README.md  main.py  mcp_agent.config.yaml  pyproject.toml
.clinerules/: 01-main.md
