[project]
name = "webpage-summary-agent"
version = "0.1.0"
description = "Webpage Summary Agent with mcp-agent and qwen"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp-agent>=0.0.10",
]

[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
default = true

